cabal-version: 3.6
name:          yaifl
version:       0.0.17.783
synopsis:      Yet another interactive fiction library.
description:
  A parser-based interactive fiction library for Haskell. The library is (roughly) in 3 parts:

    - @Yaifl.Core.*@: the foundations of the world model and objects, rules, rulebooks, activities, and actions.
    - @Yaifl.Std@: a standard library built on top of @Yaifl.Core@ with common object kinds (e.g. doors, containers, people) and implementations
      for actions and activities (e.g. looking, examining, printing the contents of something).
    - @Yaifl.Text@: utility modules for dealing with not only printing and formatting output but also a quasi-quoter for verb conjugation, interpolated
      text, name printing, and more.

  For a more in-depth birds-eye view of the library and its design, see the readme.

homepage:      https://github.com/PPKFS/yaifl
bug-reports:   https://github.com/PPKFS/yaifl/issues
license:       MIT
author:        Avery
maintainer:    Avery <ppkfs@outlook.com>
copyright:     2022-2025 Avery
category:      Game Development
build-type:    Simple
tested-with:   GHC == 9.10.1

source-repository head
  type:     git
  location: https://github.com/PPKFS/yaifl.git

common common-options
  build-depends:
    base >= 4.17.2 && < 5,
    breadcrumbs >= 1.0.0.0 && <= 10.0.0.0,
    containers >= 0.6.7 && < 1.7,
    effectful-core >= 2.3.0 && < 3.4,
    effectful-plugin >= 1.1.0 && < 2.2,
    effectful-th >= 1.0.0 && < 2.1,
    enummapset >= 0.7.2 && < 1.8,
    haskell-src-exts >= 1.23.1 && < 2.0,
    haskell-src-meta >= 0.8.13 && < 2.0,
    megaparsec >= 9.6.1 && < 10.0,
    named >= 0.3.0 && < 1.0,
    prettyprinter >= 1.7.1 && < 3.0,
    prettyprinter-ansi-terminal >= 1.1.3 && < 2.0,
    random,
    solitude >= 0.0.0.0 && <= 10.0.0.0,
    split >= 0.2.4 && < 2.0,
    template-haskell >= 2.19.0 && < 3.20,
    text >= 2.0.2 && < 3.1,
    text-display >= 0.0.5 && < 1.0,

  ghc-options:
    -Wall -Wcompat -Widentities -Wredundant-constraints
    -Wno-unused-packages -Wno-deprecations -fhide-source-paths
    -Wno-unused-top-binds -Wmissing-deriving-strategies -O2
    -flate-specialise -fspecialise-aggressively
    -fprint-potential-instances -fno-warn-unused-do-bind -haddock
    -fwrite-ide-info -fplugin=Effectful.Plugin -Wunused-packages

  default-language:   GHC2024
  default-extensions:
    DefaultSignatures
    DeriveAnyClass
    DuplicateRecordFields
    FunctionalDependencies
    MultiWayIf
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    QuasiQuotes
    StrictData
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
    ViewPatterns

library
  import: common-options
  hs-source-dirs:  src
  exposed-modules:
    Yaifl.Prelude

    Yaifl.Core.Action
    Yaifl.Core.Actions.Args
    Yaifl.Core.Actions.GoesWith
    Yaifl.Core.Activity

    Yaifl.Core.Effects
    Yaifl.Core.Entity
    Yaifl.Core.HasProperty

    Yaifl.Core.Kinds.AnyObject
    Yaifl.Core.Kinds.Enclosing
    Yaifl.Core.Kinds.Object
    Yaifl.Core.Kinds.Room
    Yaifl.Core.Kinds.Thing

    Yaifl.Core.Metadata

    Yaifl.Core.ObjectLike

    Yaifl.Core.Query.Enclosing
    Yaifl.Core.Query.Object
    Yaifl.Core.Query.Property
    Yaifl.Core.Query.Region

    Yaifl.Core.Refreshable
    Yaifl.Core.Rules.Rulebook
    Yaifl.Core.Rules.RuleEffects
    Yaifl.Core.Rules.Run

    Yaifl.Core.Store
    Yaifl.Core.TH
    Yaifl.Core.Tag
    Yaifl.Core.WorldModel


    Yaifl
    Yaifl.Std.Rulebooks.ActionProcessing
    Yaifl.Std.Actions.Imports
    Yaifl.Std.Actions.Closing
    Yaifl.Std.Actions.Collection
    Yaifl.Std.Actions.Examining
    Yaifl.Std.Actions.Entering
    Yaifl.Std.Actions.Exiting
    Yaifl.Std.Actions.GettingOff
    Yaifl.Std.Actions.Going
    Yaifl.Std.Actions.Looking
    Yaifl.Std.Actions.Looking.Locale
    Yaifl.Std.Actions.Looking.Visibility
    Yaifl.Std.Actions.Opening
    Yaifl.Std.Actions.SwitchingOn
    Yaifl.Std.Actions.Taking
    Yaifl.Std.Actions.Waiting
    Yaifl.Std.Actions.OutOfWorld

    Yaifl.Std.Activities.ChoosingNotableLocaleObjects
    Yaifl.Std.Activities.ListingContents
    Yaifl.Std.Activities.PrintingLocaleParagraphAbout
    Yaifl.Std.Activities.PrintingTheLocaleDescription
    Yaifl.Std.Activities.PrintingRoomDescriptionDetails
    Yaifl.Std.Activities.PrintingInventoryDetails

    Yaifl.Std.Create.Object
    Yaifl.Std.Create.RoomConnection

    Yaifl.Std.EffectHandlers
    Yaifl.Std.Move
    Yaifl.Std.ObjectSpecifics
    Yaifl.Std.Parser
    Yaifl.Std.Rulebooks.WhenPlayBegins
    Yaifl.Std.World
    Yaifl.Std.Create.Rule

    Yaifl.Std.Kinds.Animal
    Yaifl.Std.Kinds.Backdrop
    Yaifl.Std.Kinds.Container
    Yaifl.Std.Kinds.Device
    Yaifl.Std.Kinds.Direction
    Yaifl.Std.Kinds.Door
    Yaifl.Std.Kinds.MultiLocated
    Yaifl.Std.Kinds.ObjectKind
    Yaifl.Std.Kinds.Openable
    Yaifl.Std.Kinds.Person
    Yaifl.Std.Kinds.Region
    Yaifl.Std.Kinds.Supporter


    Yaifl.Text.AdaptiveNarrative
    Yaifl.Text.DynamicText
    Yaifl.Text.ListWriter
    Yaifl.Text.ListWriter.AfterEntry
    Yaifl.Text.ListWriter.Parameters
    Yaifl.Text.ListWriter.Responses
    Yaifl.Text.ListWriter.WriteListR
    Yaifl.Text.Print
    Yaifl.Text.ResponseCollection
    Yaifl.Text.Responses
    Yaifl.Text.Say
    Yaifl.Text.SayQQ
    Yaifl.Text.Verb
    Yaifl.Text.SayableValue

    Yaifl.Std.Create
    Yaifl.Std.Rulebooks.TurnSequence
    Yaifl.Std.Rulebooks.Accessibility

  build-depends:
    , effectful-th
    , enummapset
    , haskell-src-exts
    , haskell-src-meta
    , megaparsec
    , prettyprinter
    , prettyprinter-ansi-terminal
    , roguefunctor
    , split

test-suite yaifl-test
  import:             common-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:
    , aeson
    , directory
    , effectful-plugin
    , tasty
    , tasty-silver
    , yaifl
    , random

  ghc-options:
    -Wno-unused-packages -threaded -rtsopts -with-rtsopts=-N

  default-extensions:
    NoImplicitPrelude
    QuasiQuotes
    TemplateHaskell

  other-modules:
    Yaifl.Test.Chapter3.Bic
    Yaifl.Test.Chapter3.Common
    Yaifl.Test.Chapter3.DisenchantmentBay
    Yaifl.Test.Chapter3.DisenchantmentBay2
    Yaifl.Test.Chapter3.DisenchantmentBay4
    Yaifl.Test.Chapter3.FirstNameBasis
    Yaifl.Test.Chapter3.Laura
    Yaifl.Test.Chapter3.Escape
    Yaifl.Test.Chapter3.MidsummerDay
    Yaifl.Test.Chapter3.Replanting
    Yaifl.Test.Chapter3.PortRoyal
    Yaifl.Test.Chapter3.PortRoyal2
    Yaifl.Test.Chapter3.PortRoyal3
    Yaifl.Test.Chapter3.SlightlyWrong
    Yaifl.Test.Chapter3.StarryVoid
    Yaifl.Test.Chapter3.Tamed
    Yaifl.Test.Chapter3.TheUnbuttonedElevatorAffair
    Yaifl.Test.Chapter3.UpAndUp
    Yaifl.Test.Chapter3.Verbosity
    Yaifl.Test.Common
